--- a/Frontend/login.html
+++ b/Frontend/login.html
@@ -10,6 +10,7 @@
 
     <!--css file-->
     <link rel="stylesheet" href="styles.css" />
+    <script src="app.js"></script>
 </head>
 <body>
     <!-- header section starts  -->
@@ -30,15 +31,15 @@
             <div class="login-form">
                 <div class="sign-in-htm">
                     <div class="group">
-                        <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input">
+                        <label for="signin-user" class="label">Username</label>
+                        <input id="signin-user" type="text" class="input">
                     </div>
                     <div class="group">
-                        <label for="pass" class="label">Password</label>
-                        <input id="pass" type="password" class="input" data-type="password">
+                        <label for="signin-pass" class="label">Password</label>
+                        <input id="signin-pass" type="password" class="input" data-type="password">
                     </div>
                     <div class="group">
-                        <input type="submit" class="button" value="Sign In">
+                        <input type="submit" class="button" value="Sign In" onclick="SignIn()">
                     </div>
                     <div class="hr"></div>
                     <div class="foot-lnk">
@@ -47,32 +48,31 @@
                 </div>
                 <div class="sign-up-htm">
                     <div class="group">
-                        <label for="user" class="label">Username</label>
-                        <input id="user" type="text" class="input">
+                        <label for="signup-user" class="label">Username</label>
+                        <input id="signup-user" type="text" class="input">
                     </div>
                     <div class="group">
-                        <label for="pass" class="label">Email Address</label>
-                        <input id="email" type="text" class="input">
+                        <label for="signup-email" class="label">Email Address</label>
+                        <input id="signup-email" type="text" class="input">
                     </div>
                     <div class="group">
-                        <label for="user" class="label">User Type(Admin/User)</label>
-                        <input id="userType" type="text" class="input">
+                        <label for="signup-usertype" class="label">User Type(Admin/User)</label>
+                        <input id="signup-usertype" type="text" class="input">
                     </div>
                     <div class="group">
-                        <label for="pass" class="label">Password</label>
-                        <input id="pass" type="password" class="input" data-type="password">
+                        <label for="signup-pass" class="label">Password</label>
+                        <input id="signup-pass" type="password" class="input" data-type="password">
                     </div>
-
-
                     <div class="group">
-                        <input type="submit" class="button" value="Sign Up">
+                        <input type="submit" class="button" value="Sign Up" onclick="SignUp()">
                     </div>
                     <div class="foot-lnk">
-                        <label for="tab-1">Already Member?</a>
+                        <label for="tab-1">Already Member?</label>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    
 </body>
 </html>
